engr441/while-jvm/tests/invalid-typing/Typing_Invalid_34.while
void f() {}

int g() {
    return f();
}

